--- a/styles/general.css
+++ b/styles/general.css
@@ -1,8 +1,39 @@
-
-
-.body {
+body {
   background-color: gray;
-  font-family:Arial, Helvetica, sans-serif;
   color: black;
-  margin: 0px;
+}
+
+.my-cv-header {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  padding: 12px 16px;
+}
+
+.left-section {
+  justify-self: center;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.middle-section {
+  justify-self: left;
+  text-align: left;
+  font: 600 20px/1.2 "Roboto", system-ui, -apple-system, Segoe UI, Arial, sans-serif;
+}
+
+.right-section b {
+  justify-self: end;
+  display: flex;
+  gap: 16px;
+}
+
+.header-link,
+.profile-picture {
+  width: 64px;
+  height: 64px;
+  object-fit: cover;
+  border-radius: 50%;
+  display: block;
 }
