--- a/styles/general.css
+++ b/styles/general.css
@@ -495,6 +495,10 @@ strong {
     gap: 15px;
     flex-wrap: wrap;
     justify-content: center;
-    display: flexbox;
+    display: flex;
+  }
+
+  .band {
+      padding: 100px 0;
   }
 }
