--- a/styles/general.css
+++ b/styles/general.css
@@ -432,6 +432,22 @@ strong {
   margin-bottom: 8px;
 }
 
+.tile__link {
+  display: block;
+  color: inherit;
+  text-decoration: none;
+  height: 100%;
+}
+
+.tile__link:focus-visible {
+  outline: 3px solid currentColor;
+  outline-offset: 4px;
+}
+
+.tile__link:hover .card-title {
+  text-decoration: underline;
+}
+
 /*
   =========================================================
   GOALS LIST
